# countdown-timer-traffic-light-estimation

./: .gitignore  .gitmodules  LICENSE  README.md
countdown_timer_estimator/: CMakeLists.txt
countdown_timer_estimator/apps/: CMakeLists.txt  demo_single_sequence.cc
countdown_timer_estimator/config/: distribution.txt  hsmm_parameter_proto.config  hsmm_parameter_proto.yaml
countdown_timer_estimator/include/common/: data_loader.h  enum.h  enum_transformer.h  structure.h
countdown_timer_estimator/include/hsmm/: hsmm_parameter.h  hsmm_worker.h
countdown_timer_estimator/proto/: CMakeLists.txt  hsmm_parameter.pb.cc  hsmm_parameter.pb.h  hsmm_parameter.proto  proto_api.h
countdown_timer_estimator/src/: CMakeLists.txt
countdown_timer_estimator/src/common/: CMakeLists.txt  data_loader.cc  enum_transformer.cc
countdown_timer_estimator/src/hsmm/: CMakeLists.txt  hsmm_parameter.cc  hsmm_worker.cc
digit_classifier/: dataset.py  model.pkl  model.py  testing.py  training.py
udi_cttl_dataset/: description.md
udi_cttl_dataset/0_offset/01/: classification.txt  gt.txt  timestamp.txt
udi_cttl_dataset/0_offset/02/: classification.txt  gt.txt  timestamp.txt
udi_cttl_dataset/0_offset/03/: classification.txt  gt.txt  timestamp.txt
udi_cttl_dataset/0_offset/04/: classification.txt  timestamp.txt
udi_cttl_dataset/0_offset/05/: classification.txt  gt.txt
udi_cttl_dataset/0_offset/06/: classification.txt  timestamp.txt
udi_cttl_dataset/0_offset/07/: classification.txt  gt.txt
udi_cttl_dataset/0_offset/08/: timestamp.txt
udi_cttl_dataset/0_offset/10/: classification.txt
udi_cttl_dataset/3_offset/01/: classification.txt
udi_cttl_dataset/3_offset/02/: classification.txt
udi_cttl_dataset/3_offset/03/: classification.txt
udi_cttl_dataset/3_offset/04/: classification.txt  gt.txt
udi_cttl_dataset/3_offset/05/: classification.txt  timestamp.txt
udi_cttl_dataset/3_offset/06/: classification.txt
udi_cttl_dataset/3_offset/07/: classification.txt  timestamp.txt
udi_cttl_dataset/3_offset/08/: classification.txt  gt.txt
udi_cttl_dataset/3_offset/09/: classification.txt  timestamp.txt
udi_cttl_dataset/3_offset/10/: classification.txt  gt.txt  timestamp.txt
udi_cttl_dataset/5_offset/01/: classification.txt
udi_cttl_dataset/5_offset/02/: classification.txt
udi_cttl_dataset/5_offset/03/: classification.txt
udi_cttl_dataset/5_offset/04/: classification.txt
udi_cttl_dataset/5_offset/05/: classification.txt
udi_cttl_dataset/5_offset/06/: classification.txt  gt.txt
udi_cttl_dataset/5_offset/07/: classification.txt
udi_cttl_dataset/5_offset/08/: classification.txt
udi_cttl_dataset/5_offset/09/: classification.txt  gt.txt
udi_cttl_dataset/5_offset/10/: classification.txt
